exercises/resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-webserver-green
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    name: go-example-webserver-green
---
apiVersion: v1
kind: Service
metadata:
  name: go-webserver-blue
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    name: go-example-webserver-blue
